2008-12-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/gstdvbsrc.c:
	With constant read failures, make sure we exit the read_device
	method.

2008-12-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/gstdvbsrc.c:
	Post bus message with dvb read failure when unable to read from
	device.

2008-12-23  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Luotao Fu <l dot fu at pengutronix dot de>

	* sys/fbdev/gstfbdevsink.c: (gst_fbdevsink_getcaps):
	Fix the Depth calculation.
	Fixes #564114.

2008-12-23  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Arnout Vandecappelle <arnout at mind dot be>

	* gst/rtpmanager/rtpjitterbuffer.c: (rtp_jitter_buffer_reset_skew),
	(calculate_skew):
	* gst/rtpmanager/rtpjitterbuffer.h:
	Keep track of the last outgoing timestamp and of the last sender-side
	time.  Timestamps can only go forward if they do at the sender
	side, can only go back if they do at the sender side, and remain the
	same if they remain the same at the sender side. Fixes #565319.

2008-12-22  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfmpeg.c: (mxf_mpeg_es_create_caps),
	(mxf_mpeg_create_caps):
	Add initial support for h.264 video (SMPTE RP2008).

2008-12-22  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfmetadata.c: (mxf_metadata_base_resolve):
	* gst/mxf/mxfmetadata.h:
	If resolving a metadata object failed the first time return
	FALSE for a second mxf_metadata_base_resolve() call instead
	of TRUE.

2008-12-22  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxf.c:
	* gst/mxf/mxfaes-bwf.h:
	* gst/mxf/mxfd10.c:
	* gst/mxf/mxfdms1.c:
	* gst/mxf/mxfdms1.h:
	* gst/mxf/mxfmpeg.h:
	* gst/mxf/mxftypes.h:
	Cleanup of the includes.

2008-12-19  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/qtmux/gstqtmux.c: (gst_qt_mux_change_state):
	Do not tempt or suggest to violate gst_collect_pads API specification.
